--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "manifest_version": 2,
 
   "name": "Waxpost (Weasyl Crossposter)",
+  "short_name": "Waxpost",
   "description": "This extension adds a 'Crosspost to Weasyl' button to various art sites.",
   "version": "0.1.1",
 
